--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/kilianspeder/ma2x-touch#readme",
   "dependencies": {
+    "bidirectional-map": "^1.1.1",
+    "closest-match": "^1.3.3",
     "easymidi": "^3.1.0",
     "websocket": "^1.0.34"
   }
